# TestTaskClientDev

./: Ball.cpp  Ball.h  BallFactory.cpp  BallFactory.h  CMakeLists.txt  Game.cpp  Game.h  GameController.cpp  GameController.h  GameModel.cpp  GameModel.h  GameView.cpp  GameView.h  Paddle.cpp  Paddle.h  PaddleFactory.cpp  PaddleFactory.h  README.md  config.h  main.cpp
